# bioshock-remastered-headtracking

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  build.rs  launcher-manifest.json  pixi.toml  xinput1_3.def
.github/workflows/: build.yml  release.yml
scripts/: deploy.ps1  detect-game.ps1  install.cmd  package.ps1  release-nightly.ps1  release.ps1  uninstall.cmd  uninstall.ps1  validate-release.ps1  vanilla.ps1
src/: config.rs  engine_hook.rs  hook_util.rs  hotkeys.rs  lib.rs  memory.rs  opentrack.rs  smoothing.rs  tracking.rs  window.rs
src/d3d/: hud.rs  mod.rs  overlay.rs
