[package]
name = "bioshock-remastered-head-tracking"
version = "0.1.0"
edition = "2021"
authors = ["itsloopyo / CameraUnlock"]
description = "Decoupled look+aim head tracking mod for BioShock Remastered via OpenTrack UDP. Part of the CameraUnlock project."
license = "MIT"
repository = "https://github.com/itsloopyo/bioshock-remastered"
readme = "README.md"

[lib]
name = "bioshock_headtrack"
crate-type = ["cdylib"]

[dependencies]
parking_lot = "0.12.3"
log = "0.4.22"
simplelog = "0.12.2"
once_cell = "1.20.2"
minhook = "0.8.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Foundation_Numerics",
]

[profile.release]
opt-level = 3
lto = false
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1

